Get that debug output

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^1.0.0-canary.2",
-    "@11ty/eleventy-plugin-vue": "^0.2.2"
+    "@11ty/eleventy-plugin-vue": "^0.2.2",
+    "debug": "^4.3.1"
   }
 }
