--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@11ty/eleventy": "1.0.0-canary.10",
     "@11ty/eleventy-plugin-vue": "^0.3.0",
-    "debug": "^4.3.1",
-    "fs-extra": "^9.1.0"
+    "debug": "^4.3.1"
   }
 }
