--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "ELEVENTY_EXPERIMENTAL=true npx @11ty/eleventy",
     "bundle": "./bundle.sh",
-    "local-test": "./bundle.sh && cd netlify/functions/cloud && node index.js",
+    "local-test": "./bundle.sh && netlify dev",
     "build-production": "npm run bundle && npm run build"
   },
   "keywords": [],
