--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ node_modules
 package-lock.json
 _site
 .cache
-netlify/functions/cloud/
+netlify/functions/serverless/
+!netlify/functions/serverless/index.js
