--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
-  publish = "_site"
-  command = "npm run build-production"
+publish = "_site"
+command = "npm run build-production"
+
+[[redirects]]
+from = "/dynamic/"
+to = "/.netlify/functions/serverless"
+status = 200
+force = true
