--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@ node_modules
 package-lock.json
 _site
 .cache
-netlify/functions/serverless/
+netlify/functions/serverless/*
 !netlify/functions/serverless/index.js
