--- a/netlify.toml
+++ b/netlify.toml
@@ -3,19 +3,13 @@ publish = "_site"
 command = "npm run build-production"
 
 [[redirects]]
-from = "/dynamic/"
-to = "/.netlify/functions/serverless"
-status = 200
-force = true
-
-[[redirects]]
 from = "/:key/"
 to = "/.netlify/functions/serverless"
 status = 200
 force = true
 
 [[redirects]]
-from = "/:key/cached/"
-to = "/.netlify/functions/ondemandbuilder"
+from = "/:key/dynamic/"
+to = "/.netlify/functions/dynamic"
 status = 200
 force = true
