--- a/netlify.toml
+++ b/netlify.toml
@@ -7,9 +7,11 @@ from = "/:key/"
 to = "/.netlify/functions/serverless"
 status = 200
 force = true
+_generated_by_eleventy_serverless = "serverless"
 
 [[redirects]]
 from = "/:key/dynamic/"
 to = "/.netlify/functions/dynamic"
 status = 200
 force = true
+_generated_by_eleventy_serverless = "dynamic"
