--- a/netlify.toml
+++ b/netlify.toml
@@ -3,14 +3,14 @@ publish = "_site"
 command = "npm run build-production"
 
 [[redirects]]
-from = "/:key/"
+from = "/:slug/"
 to = "/.netlify/functions/serverless"
 status = 200
 force = true
 _generated_by_eleventy_serverless = "serverless"
 
 [[redirects]]
-from = "/:key/dynamic/"
+from = "/:slug/dynamic/"
 to = "/.netlify/functions/dynamic"
 status = 200
 force = true
