--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@11ty/eleventy": "1.0.0-canary.41",
+    "@11ty/eleventy": "1.0.0-beta.7",
     "@netlify/functions": "^0.7.2"
   }
 }
