Update deps and defaults

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "build": "npx @11ty/eleventy",
     "start": "npx @11ty/eleventy --serve",
-    "build-production": "npm run build"
+    "build-production": "npm run build",
+    "clean": "rm -rf _site && rm -rf netlify/functions/*"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.1",
-    "@netlify/functions": "^0.7.2"
+    "@11ty/eleventy": "2.0.0-canary.24",
+    "@netlify/functions": "^1.4.0"
   }
 }
