--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@11ty/eleventy": "2.0.0-canary.27",
+    "@11ty/eleventy": "^2.0.1",
     "@netlify/functions": "^1.4.0"
   }
 }
